syntax = "proto3";
package test;

import "gogoproto/gogo.proto";
import "utilities/test/schema/helpers/base/mappable.proto";
import "schema/parameters/base/parameter.v1.proto";

message GenesisState {
  option (gogoproto.goproto_getters) = false;

  repeated TestMappable mappables = 1;
  repeated parameters.Parameter parameters = 2;
}